# MyTinyKVStore

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  next-phase-plan.md  plan.md  post-production-plan.md  production-plan.md  requirement-compliance-plan.md
.github/workflows/: ci.yml
benchmarks/reference/: ci-floor.json  microbench-floor.json
docs/: advanced-semantics-decision.md  compatibility-matrix.md  file-format.md  migration-policy.md  performance-baseline.md  qualification-contract.md  runbook.md  semantics.md  transaction-boundary.md
docs/internal/: container-design.md  controller-audit.md  format-design.md  recovery-design.md  writer-design.md
include/: kvstore.h
scripts/: bench-baseline.sh  bench-regression-check.sh  bench-trend.sh  bench.sh  ci-bench-regression.sh  ci-build.sh  ci-microbench-regression.sh  ci-sanitizers.sh  collect-artifacts.sh  compatibility-matrix.sh  concurrency-stress.sh  coverage.sh  inspect-format.sh  microbench-regression-check.sh  microbench-trend.sh  microbench.sh  multi-profile-stress.sh  profile.sh  qualification-run.sh  rewrite-format.sh  soak.sh  tsan.sh  verify-format.sh
src/: kvstore.cpp
src/internal/: compaction.cpp  compaction.h  container_format.cpp  container_format.h  format.cpp  format.h  io.cpp  io.h  latency_metrics.cpp  latency_metrics.h  metrics_helpers.cpp  metrics_helpers.h  metrics_snapshot.cpp  metrics_snapshot.h  observability.cpp  observability.h  recent_metrics.cpp  recent_metrics.h  recovery.cpp  recovery.h  request_runtime.cpp  request_runtime.h  wal_accounting.cpp  wal_accounting.h  writer_execution.cpp  writer_execution.h  writer_policy.cpp  writer_policy.h  writer_wait.cpp  writer_wait.h
tests/: main.cpp
tests/common/: benchmark_analysis.cpp  benchmark_analysis.h  benchmark_cli.cpp  benchmark_entrypoints.h  benchmark_runtime.cpp  benchmark_shared.cpp  benchmark_shared.h  cli_entrypoints.h  format_analysis.cpp  format_analysis.h  format_cli.cpp  runtime_cli.cpp  runtime_entrypoints.h  runtime_profiles.cpp  runtime_shared.h  runtime_stress.cpp  test_driver.cpp  test_driver.h  test_support.cpp  test_support.h
tests/integration/: all_tests.cpp  basic_kv_tests.cpp  benchmark_trend_tests.cpp  durability_smoke_tests.cpp  json_cli_tests.cpp  metrics_controller_tests.cpp  recovery_format_tests.cpp  runtime_concurrency_tests.cpp  test_registry.h
tests/unit/: container_format_test.cpp  internal_helpers_test.cpp  request_runtime_test.cpp  test_registry.h  unit_main.cpp  wal_accounting_test.cpp  writer_execution_test.cpp  writer_wait_test.cpp
